2023-06-21 update note